Redesign and rename timeline_entry
-item_timeline_entry 를 ConstraintLayout을 사용해 수정한다.
-activity_main을 변경된 View에 따라 수정한다.

Fixes https://github.com/chatty-app/chatty-app/issues/26

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
   <string name="app_name">vacation-homework-android</string>
   <string name="WRITE_SUBMIT">write</string>
   <string name="TEMP">temp</string>
+  <string name="main_text_Mypartner">My partner</string>
   <string name="item_global_header_button_timeline_title_text">DIARY</string>
   <string name="item_header_textview_name_text">name</string>
   <string name="item_header_textview_date_text">date</string>
