--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
   <string name="SETTING_PROFILE_MAIN_DURING">Days we have shared</string>
   <string name="SETTING_PROFILE_MAIN_EDIT_BUTTON">Edit Friend</string>
   <string name="SETTING_PROFILE_MAIN_STARTDATE">The first day we met</string>
+  <string name="text_emotion_question">How did you feel today?</string>
+  <string name="text_emotion_button">OK</string>
 </resources>
